Summary of important user-visible changes for releases of the signal package

===============================================================================
signal-x.y.z   Release Date: yyyy-mm-dd   Release Manager: 
===============================================================================

 ** Package is no longer automatically loaded

===============================================================================
signal-1.1.2   Release Date: 2012-01-06   Release Manager: Lukas Reichlin
===============================================================================

 * Added the following filter conversion functions:
    ss2tf
    ss2zp
    tf2ss
    tf2zp
    zp2ss
    zp2tf

===============================================================================
signal-1.1.1   Release Date: 2011-11-06   Release Manager: Juan Pablo Carbajal
===============================================================================

 * Following function now show help text correctly instead of copyright notice:
    downsample
    dst
    flattopwin
    fwhm
    idst
    square
    upsample
 * Apply pathc by Paul Dreik to cl2bp_lib.h.

===============================================================================
signal-1.1.0   Release Date: 2011-11-04   Release Manager: Juan Pablo Carbajal
===============================================================================

* Minor bug fixes in:
 blackmannuttall.m
 xcorr.m
 filtfilt.m
 invfreq.m
 invfreqs.m
 resample.m

* New functions added:
 data2fun.m
 impinvar.m
 invimpinvar.m
 sigmoid_train.m
 pei_tseng_notch.m
 iirlp2mb.m

* Not implemented functions removed from the documentation.
* All demos are now working!